[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"bridges/primitives/messages",
	"bridges/primitives/relayers",
	"bridges/primitives/runtime",
	"bridges/primitives/chain-bridge-hub-rococo",
	"bridges/primitives/chain-bridge-hub-wococo",
	"bridges/primitives/chain-rococo",
	"bridges/primitives/chain-wococo",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/statemint",
	"parachains/runtimes/assets/statemine",
	"parachains/runtimes/assets/westmint",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/testing/penpal",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/polkadot"]
polkadot-cli = { path = "/home/kata/code/polkadot/cli" }
polkadot-client = { path = "/home/kata/code/polkadot/node/client" }
kusama-runtime = { path = "/home/kata/code/polkadot/runtime/kusama" }
kusama-runtime-constants = { path = "/home/kata/code/polkadot/runtime/kusama/constants" }
polkadot-primitives = { path = "/home/kata/code/polkadot/primitives" }
polkadot-core-primitives = { path = "/home/kata/code/polkadot/core-primitives" }
polkadot-parachain = { path = "/home/kata/code/polkadot/parachain" }
polkadot-runtime-common = { path = "/home/kata/code/polkadot/runtime/common" }
polkadot-runtime-parachains = { path = "/home/kata/code/polkadot/runtime/parachains" }
polkadot-runtime-metrics = { path = "/home/kata/code/polkadot/runtime/metrics" }
xcm = { path = "/home/kata/code/polkadot/xcm" }
xcm-procedural = { path = "/home/kata/code/polkadot/xcm/procedural" }
xcm-executor = { path = "/home/kata/code/polkadot/xcm/xcm-executor" }
polkadot-primitives-test-helpers = { path = "/home/kata/code/polkadot/primitives/test-helpers" }
slot-range-helper = { path = "/home/kata/code/polkadot/runtime/common/slot_range_helper" }
pallet-xcm = { path = "/home/kata/code/polkadot/xcm/pallet-xcm" }
xcm-builder = { path = "/home/kata/code/polkadot/xcm/xcm-builder" }
pallet-xcm-benchmarks = { path = "/home/kata/code/polkadot/xcm/pallet-xcm-benchmarks" }
polkadot-node-core-parachains-inherent = { path = "/home/kata/code/polkadot/node/core/parachains-inherent" }
tracing-gum = { path = "/home/kata/code/polkadot/node/gum" }
tracing-gum-proc-macro = { path = "/home/kata/code/polkadot/node/gum/proc-macro" }
polkadot-node-jaeger = { path = "/home/kata/code/polkadot/node/jaeger" }
polkadot-node-primitives = { path = "/home/kata/code/polkadot/node/primitives" }
polkadot-erasure-coding = { path = "/home/kata/code/polkadot/erasure-coding" }
polkadot-node-subsystem = { path = "/home/kata/code/polkadot/node/subsystem" }
polkadot-node-subsystem-types = { path = "/home/kata/code/polkadot/node/subsystem-types" }
polkadot-node-network-protocol = { path = "/home/kata/code/polkadot/node/network/protocol" }
polkadot-statement-table = { path = "/home/kata/code/polkadot/statement-table" }
polkadot-overseer = { path = "/home/kata/code/polkadot/node/overseer" }
polkadot-node-metrics = { path = "/home/kata/code/polkadot/node/metrics" }
polkadot-test-service = { path = "/home/kata/code/polkadot/node/test/service" }
polkadot-rpc = { path = "/home/kata/code/polkadot/rpc" }
polkadot-service = { path = "/home/kata/code/polkadot/node/service" }
polkadot-approval-distribution = { path = "/home/kata/code/polkadot/node/network/approval-distribution" }
polkadot-node-subsystem-test-helpers = { path = "/home/kata/code/polkadot/node/subsystem-test-helpers" }
polkadot-node-subsystem-util = { path = "/home/kata/code/polkadot/node/subsystem-util" }
polkadot-availability-bitfield-distribution = { path = "/home/kata/code/polkadot/node/network/bitfield-distribution" }
polkadot-availability-distribution = { path = "/home/kata/code/polkadot/node/network/availability-distribution" }
polkadot-availability-recovery = { path = "/home/kata/code/polkadot/node/network/availability-recovery" }
polkadot-collator-protocol = { path = "/home/kata/code/polkadot/node/network/collator-protocol" }
polkadot-dispute-distribution = { path = "/home/kata/code/polkadot/node/network/dispute-distribution" }
polkadot-gossip-support = { path = "/home/kata/code/polkadot/node/network/gossip-support" }
polkadot-network-bridge = { path = "/home/kata/code/polkadot/node/network/bridge" }
polkadot-node-collation-generation = { path = "/home/kata/code/polkadot/node/collation-generation" }
polkadot-node-core-approval-voting = { path = "/home/kata/code/polkadot/node/core/approval-voting" }
polkadot-node-core-av-store = { path = "/home/kata/code/polkadot/node/core/av-store" }
polkadot-node-core-backing = { path = "/home/kata/code/polkadot/node/core/backing" }
polkadot-node-core-bitfield-signing = { path = "/home/kata/code/polkadot/node/core/bitfield-signing" }
polkadot-node-core-candidate-validation = { path = "/home/kata/code/polkadot/node/core/candidate-validation" }
polkadot-node-core-pvf = { path = "/home/kata/code/polkadot/node/core/pvf" }
test-parachain-adder = { path = "/home/kata/code/polkadot/parachain/test-parachains/adder" }
test-parachain-halt = { path = "/home/kata/code/polkadot/parachain/test-parachains/halt" }
polkadot-node-core-chain-api = { path = "/home/kata/code/polkadot/node/core/chain-api" }
polkadot-node-core-chain-selection = { path = "/home/kata/code/polkadot/node/core/chain-selection" }
polkadot-node-core-dispute-coordinator = { path = "/home/kata/code/polkadot/node/core/dispute-coordinator" }
polkadot-node-core-provisioner = { path = "/home/kata/code/polkadot/node/core/provisioner" }
polkadot-node-core-pvf-checker = { path = "/home/kata/code/polkadot/node/core/pvf-checker" }
polkadot-node-core-runtime-api = { path = "/home/kata/code/polkadot/node/core/runtime-api" }
polkadot-runtime = { path = "/home/kata/code/polkadot/runtime/polkadot" }
polkadot-runtime-constants = { path = "/home/kata/code/polkadot/runtime/polkadot/constants" }
polkadot-statement-distribution = { path = "/home/kata/code/polkadot/node/network/statement-distribution" }
rococo-runtime = { path = "/home/kata/code/polkadot/runtime/rococo" }
rococo-runtime-constants = { path = "/home/kata/code/polkadot/runtime/rococo/constants" }
westend-runtime = { path = "/home/kata/code/polkadot/runtime/westend" }
westend-runtime-constants = { path = "/home/kata/code/polkadot/runtime/westend/constants" }
polkadot-test-client = { path = "/home/kata/code/polkadot/node/test/client" }
polkadot-test-runtime = { path = "/home/kata/code/polkadot/runtime/test-runtime" }
test-runtime-constants = { path = "/home/kata/code/polkadot/runtime/test-runtime/constants" }
polkadot-performance-test = { path = "/home/kata/code/polkadot/node/test/performance-test" }
xcm-executor-integration-tests = { path = "/home/kata/code/polkadot/xcm/xcm-executor/integration-tests" }
xcm-simulator = { path = "/home/kata/code/polkadot/xcm/xcm-simulator" }
xcm-simulator-example = { path = "/home/kata/code/polkadot/xcm/xcm-simulator/example" }
xcm-simulator-fuzzer = { path = "/home/kata/code/polkadot/xcm/xcm-simulator/fuzzer" }
polkadot-test-malus = { path = "/home/kata/code/polkadot/node/malus" }
zombienet-backchannel = { path = "/home/kata/code/polkadot/node/zombienet-backchannel" }
test-parachains = { path = "/home/kata/code/polkadot/parachain/test-parachains" }
test-parachain-adder-collator = { path = "/home/kata/code/polkadot/parachain/test-parachains/adder/collator" }
test-parachain-undying = { path = "/home/kata/code/polkadot/parachain/test-parachains/undying" }
test-parachain-undying-collator = { path = "/home/kata/code/polkadot/parachain/test-parachains/undying/collator" }
staking-miner = { path = "/home/kata/code/polkadot/utils/staking-miner" }
remote-ext-tests-bags-list = { path = "/home/kata/code/polkadot/utils/remote-ext-tests/bags-list" }
polkadot-voter-bags = { path = "/home/kata/code/polkadot/utils/generate-bags" }
polkadot = { path = "/home/kata/code/polkadot" }
